--- a/BeeQuick/BeeQuick/Main/Main.storyboard
+++ b/BeeQuick/BeeQuick/Main/Main.storyboard
@@ -1,19 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="bv7-uk-Z9w">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A319" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="bv7-uk-Z9w">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Main Tab Bar Controller-->
         <scene sceneID="lqC-ln-V4Y">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="xhl-iR-k1a" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tabBarController id="bv7-uk-Z9w" customClass="MainTabBarController" customModule="BeeQuick" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" id="G96-03-Exc">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
                         <segue destination="9cY-xI-HSv" kind="relationship" relationship="viewControllers" id="m0d-1m-1SA"/>
@@ -22,46 +22,47 @@
                         <segue destination="ngU-i5-d36" kind="relationship" relationship="viewControllers" id="ebd-wS-HvS"/>
                     </connections>
                 </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xhl-iR-k1a" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-105" y="22"/>
         </scene>
         <!--Home-->
         <scene sceneID="r7g-ka-IFj">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tO9-TJ-mBG" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewControllerPlaceholder storyboardName="Home" id="9cY-xI-HSv" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="首页" image="v2_home" id="uUR-Hg-OTK"/>
                 </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tO9-TJ-mBG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="483" y="-264"/>
         </scene>
         <!--Supermarket-->
         <scene sceneID="nBU-t6-JO4">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="J6E-eE-086" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewControllerPlaceholder storyboardName="Supermarket" id="DJq-u4-6h4" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="闪电超市" image="v2_order" id="j2f-1r-sar"/>
                 </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="J6E-eE-086" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="504.5" y="-100"/>
         </scene>
         <!--ShopCart-->
         <scene sceneID="Dki-8d-B2B">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="O9S-3a-ogN" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewControllerPlaceholder storyboardName="ShopCart" id="W5I-Di-skv" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="购物车" image="shopCart" id="SkC-Bx-sLs"/>
                 </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="O9S-3a-ogN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="494" y="125"/>
         </scene>
         <!--Mine-->
         <scene sceneID="XPr-RS-gZu">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="sjN-kz-IbQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewControllerPlaceholder storyboardName="Mine" id="ngU-i5-d36" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="我的" image="v2_my" id="SIJ-MS-yxX"/>
                 </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sjN-kz-IbQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="480" y="308"/>
         </scene>
